--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ANTS</string>
+    <string name="enter_username">Username</string>
+    <string name="enter_password">Password</string>
+    <string name="login">Login</string>
+    <string name="sign_up">Sign Up</string>
+
 </resources>
